kubernetes/00-backend.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend
spec:
    type: NodePort
    ports:
    - port: 3000
      targetPort: 3000
    selector:
      app: backend
