kubernetes/00-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: pierresimt/frontend-cn
        imagePullPolicy: Always
        ports:
        - containerPort: 4100
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
spec:
    type: NodePort
    ports:
    - port: 4100
      targetPort: 4100
    selector:
      app: frontend
